--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -8,7 +8,7 @@
 
 
     <TextView
-        android:id="@+id/loginTxt"
+        android:id="@+id/txtlogout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/create_your_account"
@@ -97,7 +97,7 @@
         app:layout_constraintVertical_bias="0.473" />
 
     <Button
-        android:id="@+id/btnCreate"
+        android:id="@+id/btnLogout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="200dp"
@@ -110,7 +110,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/registerHere"
+        android:id="@+id/loginHere"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
@@ -118,7 +118,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnCreate" />
+        app:layout_constraintTop_toBottomOf="@+id/btnLogout" />
 
     <ProgressBar
         android:id="@+id/loading"
@@ -128,5 +128,5 @@
         android:layout_marginTop="14dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/loginTxt" />
+        app:layout_constraintTop_toBottomOf="@+id/txtlogout" />
 </androidx.constraintlayout.widget.ConstraintLayout>
