--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -17,7 +17,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.android.bakery.MainActivity">
+    tools:context="com.example.android.bakery.MainMenu">
     <item
         android:id="@+id/action_contact"
         android:orderInCategory="20"
