--- a/app/src/main/res/layout/activity_logout.xml
+++ b/app/src/main/res/layout/activity_logout.xml
@@ -33,5 +33,14 @@
         app:layout_constraintTop_toBottomOf="@+id/txtlogout"
         android:onClick="logout"/>
 
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/btmNag"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
